# AutomataLibrary

./: .gitignore  dune-project  meta-config.json
ast/: ast.ml  common.ml  constant.ml  dune  finiteAutomata.ml  inst.ml  item.ml  nfa.ml  pmachine.ml  qregex.ml  regex.ml  sevent.ml
backend/: automata.ml  backend.ml  dune  plang.ml
config/: config.ml  configAst.ml  dune
data/: .#Kermit2PCModel.s
data/1_ClientServer/: spec.s
data/PEnv/: Template.pproj  runone.sh
dequantified/: dequantified.ml  dune  pautomata.ml  pprop.ml  qtype.ml  world.ml
desymbolic/: desymbolic.ml  dune  head.ml  mapping.ml
dtree/: dt.ml
frontend/: common.ml  dune  front.ml  to_constant.ml  to_id.ml  to_inst.ml  to_item.ml  to_lit.ml  to_notation.ml  to_prop.ml  to_qregex.ml  to_regex.ml  to_sevent.ml  to_type_dec.ml
frontendFuncP/: lexer.mll  parser.mly
frontendP/: dune  lexer.mll  parser.mly
frontendSpec/: lexer.mll  parser.mly
instantiate/: dune  instantiate.ml
language/: dune  language.ml
ntypecheck/: dune  normal_constant_typing.ml  normal_id_typing.ml  normal_inst_typing.ml  normal_item_typing.ml  normal_qregex_typing.ml  normal_regex_typing.ml  normal_sevent_typing.ml
prover/: check.ml  dune  litencoding.ml
ptypecheck/: dune  p_constant_typing.ml  p_expr_typing.ml  p_id_typing.ml  p_item_typing.ml
qcFA/: dune  gen.ml
symExplore/: common.ml  dune  explore.ml  mexplore.ml  symExplore.ml
syntax/: basicFA.ml  common.ml  constant.ml  dune  finiteAutomata.ml  inst.ml  lit.ml  nfa.ml  op.ml  prop.ml  qregex.ml  regex.ml  sevent.ml  syntax.ml  typectx.ml
(+18 files in other folders)
