(env
 (dev
  (flags
   (:standard -w -32-35-27-33-26-64)))
 (release
  (flags
   (:standard -w -32-35-27-33-26-64))
  (ocamlopt_flags
   (:standard -unsafe -noassert -inline 100))))

(library
 (public_name automata_library.ast)
 (name ast)
 (wrapped true)
 (modules
   common
   op
   constant
   lit
   prop
   sevent
   regex
   nfa
   qregex
   typectx
   constructor_declaration
   item
   ast
 )
 (preprocess
  (pps ppx_optcomp ppx_compare ppx_sexp_conv))
 (libraries language_utils))
